--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
     }
   },
   "require": {
-    "php": ">=7.2.5",
-    "vlucas/phpdotenv": "^4.0",
-    "illuminate/console": "^7.0",
-    "illuminate/support": "^7.0",
-    "illuminate/events": "^7.0"
+    "php": "^7.4",
+    "vlucas/phpdotenv": "^5.3",
+    "illuminate/console": "^8.0",
+    "illuminate/support": "^8.0",
+    "illuminate/events": "^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.3",
+    "phpunit/phpunit": "^8.4|^9.0",
     "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^5.0"
+    "orchestra/testbench": "^6.0"
   },
   "license": "MIT",
   "authors": [
